<resources>
    <string name="add_choices_warning1">You have to set a name before you continue!</string>
    <string name="app_name">Decision Maker</string>
    <string name="decision_maker">Decision Maker</string>
    <string name="people">People</string>
    <string name="activities">Activities</string>
    <string name="travelling">Travelling</string>
    <string name="shopping">Shopping</string>
    <string name="smartphones">Smartphones</string>
    <string name="cars">Cars</string>
    <string name="video_games">Video Games</string>
    <string name="clothes">Clothes</string>
    <string name="tickets">Tickets</string>
    <string name="accommodation">Accommodation</string>
    <string name="suitcase">Suitcase</string>
    <string name="bars_clubs"><![CDATA[Bars & Clubs]]></string>
    <string name="taverns">Taverns</string>
    <string name="concerts">concerts</string>
    <string name="friends">Friends</string>
    <string name="lovers">Lovers</string>
    <string name="zodiac_signs">Zodiac Signs</string>
    <string name="smartphone_criteria">Smartphone Criteria</string>
    <string name="processor_speed">Processor Speed</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="software">Software</string>
    <string name="camera_quality">Camera Quality</string>
    <string name="add">+</string>
    <string name="continues">Continue</string>
    <string name="how_much_more_speed_does_a_have_compared_to_b">How much more speed does A have compared to B?</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="settings">Settings</string>
    <string name="new_decision">New Decision</string>
    <string name="decision_history">Decision History</string>
    <string name="quick_decision">Maruko\'s Curse</string>
    <string name="todo">TODO</string>
    <string name="language">language</string>
    <string name="info">info</string>
    <string name="white_mode">White Mode</string>
    <string name="black_mode">Black Mode</string>
    <string name="result_view">Result View</string>
    <string name="algorithm">Algorithm</string>
    <string name="my_decisions">My Decisions</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="title_activity_decision_view">DecisionView</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_information">Ultimately, each member state will decide when to reopen its borders and to whom. Therefore, each government from the 27 nations will decide whether to completely lift quarantine measures and/or testing for international visitors.
Children who are excluded from vaccination can travel to the bloc with their family, if they’ve had a negative test no more than 72 hours before arrival.
Though it remains to be seen how each EU nation will welcome foreign travelers, the agreement at the EU level is a welcome step by the battered tourism industry.
“We know that consumers want to be able to travel this summer and so we welcome that European countries could enable those who are vaccinated could travel without the need for testing,” a spokesperson for the airline easyJet told CNBC via email.
“It is of course important that this is implemented in a simple way to ensure it is easy for passengers,” the same spokesperson said.
The EU decision could be particularly important for British tourists, who are now outside of the EU and represent one of the most important markets for tourism-reliant EU nations. In addition, people in the United States, Israel and other highly vaccinated parts of the world are also likely to benefit from the EU’s stance.</string>
    <string name="copy_right">Ultimately, each member state will decide when to reopen its borders and to whom. Therefore, each government from the 27 nations will decide whether to completely lift quarantine measures and/or testing for international visitors..</string>
    <string name="chart">Chart Type</string>
    <string name="pie_chart_graph">Pie Chart</string>
    <string name="histogram_graph">Histogram</string>
    <string name="histogram3d_graph">Histogram 3D</string>
</resources>