<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingList">

    <Button
        android:id="@+id/smartphones_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/smartphones"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cars_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopping_label"
        android:onClick="goToSmartphoneCriteria"/>

    <Button
        android:id="@+id/cars_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/video_games_button"
        app:layout_constraintEnd_toEndOf="@+id/smartphones_button"
        app:layout_constraintStart_toStartOf="@+id/smartphones_button"
        app:layout_constraintTop_toBottomOf="@+id/smartphones_button" />

    <Button
        android:id="@+id/video_games_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/video_games"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/clothes_button"
        app:layout_constraintEnd_toEndOf="@+id/cars_button"
        app:layout_constraintStart_toStartOf="@+id/cars_button"
        app:layout_constraintTop_toBottomOf="@+id/cars_button" />

    <Button
        android:id="@+id/clothes_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/clothes"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/video_games_button"
        app:layout_constraintStart_toStartOf="@+id/video_games_button"
        app:layout_constraintTop_toBottomOf="@+id/video_games_button" />

    <TextView
        android:id="@+id/shopping_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/shopping"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>