<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_people_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/people"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/start_travelling_button"
        app:layout_constraintStart_toStartOf="@+id/start_travelling_button"
        app:layout_constraintTop_toBottomOf="@+id/start_travelling_button"
        android:onClick="goToPeopleList" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/decision_maker"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_shopping_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/shopping"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/start_activities_button"
        app:layout_constraintEnd_toEndOf="@+id/start_activities_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_activities_button"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        android:onClick="goToShoppingList" />

    <Button
        android:id="@+id/start_activities_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activities"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/start_travelling_button"
        app:layout_constraintEnd_toEndOf="@+id/start_travelling_button"
        app:layout_constraintStart_toStartOf="@+id/start_travelling_button"
        app:layout_constraintTop_toBottomOf="@+id/start_shopping_button"
        android:onClick="goToActivitiesList" />

    <Button
        android:id="@+id/start_travelling_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelling"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/start_people_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_activities_button"
        android:onClick="goToTravellingList" />
</androidx.constraintlayout.widget.ConstraintLayout>