<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitiesList">

    <Button
        android:id="@+id/bars_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/bars_clubs"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/concerts_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopping_label" />

    <Button
        android:id="@+id/concerts_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/taverns"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/video_games_button"
        app:layout_constraintEnd_toEndOf="@+id/bars_button"
        app:layout_constraintStart_toStartOf="@+id/bars_button"
        app:layout_constraintTop_toBottomOf="@+id/bars_button" />

    <Button
        android:id="@+id/video_games_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/concerts"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/concerts_button"
        app:layout_constraintStart_toStartOf="@+id/concerts_button"
        app:layout_constraintTop_toBottomOf="@+id/concerts_button" />

    <TextView
        android:id="@+id/shopping_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/activities"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>