<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TravellingList">

    <Button
        android:id="@+id/tickets_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/tickets"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/accommondation_button"
        app:layout_constraintEnd_toEndOf="@+id/accommondation_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/accommondation_button"
        app:layout_constraintTop_toBottomOf="@+id/shopping_label" />

    <Button
        android:id="@+id/accommondation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accommodation"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/suitcase_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tickets_button" />

    <Button
        android:id="@+id/suitcase_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/suitcase"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/accommondation_button"
        app:layout_constraintStart_toStartOf="@+id/accommondation_button"
        app:layout_constraintTop_toBottomOf="@+id/accommondation_button" />

    <TextView
        android:id="@+id/shopping_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/travelling"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>