<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeopleList">

    <Button
        android:id="@+id/friends_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/friends"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lovers_button"
        app:layout_constraintEnd_toEndOf="@+id/lovers_button"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/lovers_button"
        app:layout_constraintTop_toBottomOf="@+id/shopping_label" />

    <Button
        android:id="@+id/lovers_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lovers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/zodiac_sings_button"
        app:layout_constraintEnd_toEndOf="@+id/zodiac_sings_button"
        app:layout_constraintStart_toStartOf="@+id/zodiac_sings_button"
        app:layout_constraintTop_toBottomOf="@+id/friends_button" />

    <Button
        android:id="@+id/zodiac_sings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/zodiac_signs"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lovers_button" />

    <TextView
        android:id="@+id/shopping_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/people"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>