<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="top"
    android:textAlignment="textEnd"
    tools:context=".SmartphoneCriteria"
    tools:layout_editor_absoluteY="81dp">

    <android.widget.Switch
        android:id="@+id/option4_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="@+id/option2_switch"
        app:layout_constraintStart_toStartOf="@+id/option2_switch"
        app:layout_constraintTop_toBottomOf="@+id/option2_switch" />

    <android.widget.Switch
        android:id="@+id/option2_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@+id/option4_switch"
        app:layout_constraintEnd_toEndOf="@+id/option3_switch"
        app:layout_constraintStart_toStartOf="@+id/option3_switch"
        app:layout_constraintTop_toBottomOf="@+id/option3_switch" />

    <TextView
        android:id="@+id/camera_quality_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/camera_quality"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/processor_speed_label"
        app:layout_constraintStart_toStartOf="@+id/processor_speed_label"
        app:layout_constraintTop_toBottomOf="@+id/smarphone_criteria_label" />

    <TextView
        android:id="@+id/processor_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/processor_speed"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/internal_storage_label"
        app:layout_constraintStart_toStartOf="@+id/internal_storage_label"
        app:layout_constraintTop_toBottomOf="@+id/camera_quality_label" />

    <TextView
        android:id="@+id/internal_storage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/internal_storage"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/software_label"
        app:layout_constraintStart_toStartOf="@+id/software_label"
        app:layout_constraintTop_toBottomOf="@+id/processor_speed_label" />

    <TextView
        android:id="@+id/software_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/software"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internal_storage_label" />

    <TextView
        android:id="@+id/smarphone_criteria_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/smartphone_criteria"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Switch
        android:id="@+id/option1_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:showText="false"
        app:layout_constraintBottom_toTopOf="@+id/option3_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smarphone_criteria_label"
        tools:checked="true" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#CAC9C9"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add"
        android:textColor="#1E1C1C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/software_label" />

    <android.widget.Switch
        android:id="@+id/option3_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@+id/option2_switch"
        app:layout_constraintEnd_toEndOf="@+id/option1_switch"
        app:layout_constraintStart_toStartOf="@+id/option1_switch"
        app:layout_constraintTop_toBottomOf="@+id/option1_switch" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/continues"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="goToCompare"/>
</androidx.constraintlayout.widget.ConstraintLayout>